--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
     "pretest": "npm run lint",
-    "posttest": "remap-istanbul -i coverage/json/coverage-final.json -o coverage/html -t html",
     "docs": "typedoc --options typedoc.json src/app/app.component.ts",
     "start": "npm run server",
-    "start:hmr": "npm run server -- --hot",
-    "postinstall": "npm run webdriver-update"
+    "start:hmr": "npm run server -- --hot"
   },
   "dependencies": {
     "@angular/common": "2.0.0",
@@ -50,7 +48,6 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.3",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -59,7 +56,6 @@
     "null-loader": "0.1.1",
     "postcss-loader": "^0.9.1",
     "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.6.4",
     "rimraf": "^2.5.1",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
